# RaytracerNJ_gl

./: CMakeLists.txt  README.md
include/: BVH.h  OBJ_Loader.h  camera.h  material.h  render.h  shader.h  triangle.h
shaders/: compute.comp  copy.comp  denoise.comp  display.frag  quad.vert
src/: BVH.cpp  main.cpp  render.cpp  screen.cpp  triangle.cpp
